@@ -1470,6 +1470,8 @@ systemSettings.upgradeState.beta=Beta
 systemSettings.upgradeState.releaseCandidate=Release candidate
 systemSettings.upgradeState.production=Production
 
+systemSettings.httpSessionTimeout=HTTP Session timeout
+
 systemInfo.databaseTypeDesc=Get the type of main database being used
 systemInfo.diskInfoListDesc=Get information about disks on the server
 systemInfo.eventCountsDesc=Get the count of events 
