@@ -3,3 +3,4 @@
     @author Matthew Lohbihler
 -->
 <p>These settings determine how to make HTTP requests from Mango's location. HTTP requests are used by the HTTP Retriever data source, the HTTP Publisher, and by various other mechanisms internal to the system (including getting this documentation). Your network administrator can tell you if your location uses a proxy, and if so what settings to use.</p>
+<p>The HTTP Session timeout controls how long a User's session remains active during times of inactivity.</p>
